--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,20 @@
 
 /* Your CSS Code here. */
+
+
+.holder{
+	display:flex;
+	justify-content:space-around;
+	align-items:center;
+
+	height:100vh; 
+	flex-wrap: wrap; 
+
+}
+
+.item{
+	background-color:red;
+	border: 2px solid red;
+	padding:20px;
+	
+}
