--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,9 @@
 
 .holder{
 	display:flex;
-	justify-content:space-evenly;
+	justify-content:space-around;
 	align-items:center;
-
-	height:100vh; 
+    height:100vh; 
 	flex-wrap: wrap; 
 
 }
