--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 .holder{
 	display:flex;
-	justify-content:space-around;
+	justify-content:space-between;
 	align-items:center;
     height:100vh; 
 	flex-wrap: wrap; 
